data/derived/comb/progs/unify/prog6354.ml.out
Characters 82-86:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type ('a -> 'a) -> 'a -> ('a -> 'b) -> 'b
       but an expression was expected of type ('a -> 'a) -> 'a
       The type variable 'a occurs inside 'a -> ('a -> 'b) -> 'b
